--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -3,5 +3,5 @@
 # Created: 24/10/2014
 
 IF(INFO)
-  #  INSTALL(FILES physamp.info DESTINATION share/info)
+  INSTALL(FILES physamp.info DESTINATION share/info)
 ENDIF(INFO)
