--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -3,5 +3,5 @@
 # Created: 24/10/2014
 
 IF(MAN)
-  INSTALL(FILES bppalnoptim.1.gz DESTINATION share/man/man1)
+  INSTALL(FILES bppalnoptim.1.gz bppphysamp.1.gz DESTINATION share/man/man1)
 ENDIF(MAN)
