Fixed deprecated auto_ptr
+ other warnings. Version 1.0.2.

--- a/physamp/CMakeLists.txt
+++ b/physamp/CMakeLists.txt
@@ -7,15 +7,16 @@ ADD_EXECUTABLE(bppphysamp PhyloSampler.cpp)
 SET (physamp-targets
 	bppalnoptim
 	bppphysamp
-	)
+  )
 
 FOREACH (target ${physamp-targets})
   # Link (static or shared)
   IF (BUILD_STATIC)
     TARGET_LINK_LIBRARIES (${target} ${BPP_LIBS_STATIC})
-    SET_TARGET_PROPERTIES (${target} LINK_SEARCH_END_STATIC TRUE)
+    SET_TARGET_PROPERTIES (${target} PROPERTIES LINK_SEARCH_END_STATIC TRUE)
   ELSE (BUILD_STATIC)
     TARGET_LINK_LIBRARIES (${target} ${BPP_LIBS_SHARED})
+    SET_TARGET_PROPERTIES (${target} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
   ENDIF (BUILD_STATIC)
 ENDFOREACH (target)
 
