--- a/physamp/CMakeLists.txt
+++ b/physamp/CMakeLists.txt
@@ -17,6 +17,7 @@ FOREACH (target ${physamp-targets})
   ELSE (BUILD_STATIC)
     TARGET_LINK_LIBRARIES (${target} ${BPP_LIBS_SHARED})
     SET_TARGET_PROPERTIES (${target} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+    set_target_properties (${target} PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
   ENDIF (BUILD_STATIC)
 ENDFOREACH (target)
 
