--- a/physamp/CMakeLists.txt
+++ b/physamp/CMakeLists.txt
@@ -1,24 +1,25 @@
-# CMake script for physamp package
-# Author: Julien Dutheil
-# Created: 24/10/2014
+# SPDX-FileCopyrightText: Julien Y. Dutheil
+#
+# SPDX-License-Identifier: CECILL-2.1
 
-ADD_EXECUTABLE(bppalnoptim AlignmentOptimizer.cpp)
-ADD_EXECUTABLE(bppphysamp PhyloSampler.cpp)
-SET (physamp-targets
-	bppalnoptim
-	bppphysamp
-  )
+add_executable(bppalnoptim AlignmentOptimizer.cpp)
+add_executable(bppphysamp PhyloSampler.cpp)
+set(physamp-targets bppalnoptim bppphysamp)
 
-FOREACH (target ${physamp-targets})
-  # Link (static or shared)
-  IF (BUILD_STATIC)
-    TARGET_LINK_LIBRARIES (${target} ${BPP_LIBS_STATIC})
-    SET_TARGET_PROPERTIES (${target} PROPERTIES LINK_SEARCH_END_STATIC TRUE)
-  ELSE (BUILD_STATIC)
-    TARGET_LINK_LIBRARIES (${target} ${BPP_LIBS_SHARED})
-    SET_TARGET_PROPERTIES (${target} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
-    set_target_properties (${target} PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
-  ENDIF (BUILD_STATIC)
-ENDFOREACH (target)
+foreach(target ${physamp-targets})
+    # Link (static or shared)
+    if(BUILD_STATIC)
+        target_link_libraries(${target} ${BPP_LIBS_STATIC})
+        set_target_properties(${target} PROPERTIES LINK_SEARCH_END_STATIC TRUE)
+	target_link_options(${target} PRIVATE -static-libgcc -static-libstdc++)
+    else(BUILD_STATIC)
+        target_link_libraries(${target} ${BPP_LIBS_SHARED})
+        set_target_properties(
+            ${target}
+            PROPERTIES
+                INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
+        )
+    endif(BUILD_STATIC)
+endforeach(target)
 
-INSTALL (TARGETS ${physamp-targets} DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(TARGETS ${physamp-targets} DESTINATION ${CMAKE_INSTALL_BINDIR})
