Licencing with reust.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,9 @@
-#! /bin/bash
-
 # SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-fasttree < PF01049_full.txt > PF01049_fasttree.dnd
-
+repos:
+-   repo: https://github.com/fsfe/reuse-tool
+    rev: v1.0.0
+    hooks:
+    - id: reuse
