--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+# SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 theme: jekyll-theme-time-machine
