--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -1,6 +1,6 @@
-# CMake script for the physamp package
-# Author: Julien Dutheil
-# Created: 24/10/2014
+# SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 # Build manpages.
 # In practice, they are just compressed from the text files using COMPRESS_PROGRAM
