--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2026 Julien Y. Dutheil <dutheil@evolbio.mpg.de>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 theme: jekyll-theme-slate
 title: PhySamp
 description: Phylogenetic Sampling and Optimization of Sequence Alignments
